@@ -590,6 +590,16 @@ except possibly user interface events are processed.</para>
          </listitem>
         </varlistentry>
 
+        <varlistentry id="gel-function-LinePlotDrawAxisLabels">
+         <term>LinePlotDrawAxisLabels</term>
+         <listitem>
+          <synopsis>LinePlotDrawAxisLabels = true</synopsis>
+          <para>Tells genius to draw the axis labels for <link linkend="genius-gel-function-list-plotting">line plotting
+	  functions</link> such as <link linkend="gel-function-LinePlot"><function>LinePlot</function></link>.
+          </para>
+         </listitem>
+        </varlistentry>
+
         <varlistentry id="gel-function-LinePlotVariableNames">
          <term>LinePlotVariableNames</term>
          <listitem>
