@@ -1,3 +1,10 @@
+Thu May 31 11:54:40 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c, help/C/gel-function-list.xml: Add
+	  LineplotDrawAxisLabels parameter and corresponding checkbox on the
+	  plotting window to allow not drawing axis labels, useful for
+	  doing tiny scaled down diagrams.
+
 Sat Apr 28 16:58:20 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* Makefile.am, configure.in, atlapack, atblas: add LAPACK/BLAS, but
